syntax = "proto3";
package messages;

import "transaction/transaction.proto";
import "block/block.proto";

option go_package = "github.com/filefilego/filefilego/internal/node/protocols/messages";

// GossipPayload represents a gossip payload.
message GossipPayload {
    oneof message {
        ProtoBlocks blocks = 1;
        transaction.ProtoTransaction transaction = 2;
        DataQueryRequestProto query = 3;
    }
}

// ProtoBlocks is the proto representation of blocks envelope.
message ProtoBlocks {
    repeated block.ProtoBlock blocks = 1;
}

// DataQueryRequestProto represents a data query message.
message DataQueryRequestProto {
    repeated bytes file_hashes = 1;
    string from_peer_addr = 2;
    bytes hash = 3;
    int64 timestamp = 4;
}

// DataQueryResponseProto represents a data query response.
message DataQueryResponseProto {
    string from_peer_addr = 1;
    string total_fees = 2;
    // hash_data_query_request must be same as the DataQueryRequestProto hash
    bytes hash_data_query_request = 3;
    bytes public_key = 4;
    bytes signature = 5;
    repeated bytes file_hashes = 6;
    repeated bytes unavailable_file_hashes = 7;
    int64 timestamp = 8;
}

// DataQueryResponseTransferProto is used to request a data query response from a verifier.
message DataQueryResponseTransferProto {
    bytes hash = 1;
}

// DataQueryResponseTransferResultProto encapsulates multiple data query responses from verifier to the querying node.
message DataQueryResponseTransferResultProto {
    repeated DataQueryResponseProto responses = 1;
}

// BlockchainHeightResponseProto represents the height of a node's blockchain.
message BlockchainHeightResponseProto {
    uint64 height = 1;
}

// BlockDownloadRequestProto represents a block download request range.
message BlockDownloadRequestProto {
    uint64 from = 1;
    uint64 to = 2;
}

// BlockDownloadResponseProto represents a block download response.
message BlockDownloadResponseProto {
    uint64 from = 1;
    uint64 to = 2;
    bool error = 3;
    uint64 node_height = 4;
    repeated block.ProtoBlock blocks = 5;
}

// DownloadContractProto represents a download contract.
message DownloadContractProto {
    DataQueryResponseProto file_hoster_response = 1;
    bytes file_requester_node_public_key = 2;
    repeated bytes file_hashes_needed = 3;
    bytes verifier_public_key = 4;
    string verifier_fees = 5;
    bytes contract_hash = 6;
    bytes verifier_signature = 7;
}

// DownloadContractInTransactionDataProto is a contract metadata with the smallest fingerprint.
message DownloadContractInTransactionDataProto {
    bytes contract_hash = 1;
    bytes file_requester_node_public_key = 2;
    bytes file_hoster_node_public_key = 3;
    bytes verifier_public_key = 4;
    string verifier_fees = 5;
    string file_hoster_fees = 6;
}

// DownloadContractsHashesProto contains a list of contracts hashes which will be send as a transaction data payload.
message DownloadContractsHashesProto {
    repeated DownloadContractInTransactionDataProto contracts = 1;
}

// MerkleTreeNodesOfFileContractProto is a message which contains a list of merkle tree nodes, contract and file hashes.
message MerkleTreeNodesOfFileContractProto {
    bytes contract_hash = 1;
    bytes file_hash = 2;
    repeated bytes merkle_tree_nodes = 3;
}

// KeyIVRequestProto is a message that represents a data encryption payload to verifier node.
message KeyIVRequestProto {
    bytes contract_hash = 1;
    bytes file_hash = 2;
}

// KeyIVRandomizedFileSegmentsEnvelopeProto is a message which contains the private key, the iv, encryption type and randomized order of segments and the raw unencrypted data size.
// this message is sent from the file hoster to the verifier.
// this message should be written to the netowrk stream and after read
// the total_size_raw_unencrypted_segments number of bytes
message KeyIVRandomizedFileSegmentsEnvelopeProto {
    uint64 file_size = 1;
    bytes contract_hash = 2;
    bytes file_hash = 3;
    bytes key = 4;
    bytes iv = 5;
    bytes merkle_root_hash = 6;
    int32 encryption_type = 7;
    repeated int32 randomized_segments = 8;
    uint64 total_size_raw_unencrypted_segments = 9;
    string error = 10;
}

// FileTransferInfoProto is a message which includes the contract hash, file hash and the size of the file.
// this message is a request payload from file downloader node to file hoster node.
// when this message is received, it should start writing to the network stream the data which is encrypted
// and cut into shuffled segments
message FileTransferInfoProto {
    bytes contract_hash = 1;
    bytes file_hash = 2;
    uint64 file_size = 3;
}